--- a/index.html
+++ b/index.html
@@ -8,11 +8,23 @@
 </head>
 <body>
     <div id="menu">
-        <img src="images/CRAZY.gif" alt=""><br>
-        <img src="images/CRAZY.gif" alt=""><br>
-        <img src="images/CRAZY.gif" alt=""><a href="/forum"><img src="images/forum.gif" alt=""></a><br>
-        <img src="images/CRAZY.gif" alt=""><a href="/wordpress"><img src="images/wordpress.gif" alt=""></a><br>
-        <img src="images/CRAZY.gif" alt=""><br>
+        <div class="row-item">
+            <img src="images/CRAZY.gif" alt="">
+        </div>
+        <div class="row-item">
+            <img src="images/CRAZY.gif" alt="">
+        </div>
+        <div class="row-item">
+            <img src="images/CRAZY.gif" alt="">
+            <a href="/forum"><img src="images/forum.gif" alt=""></a>
+        </div>
+        <div class="row-item">
+            <img src="images/CRAZY.gif" alt="">
+            <a href="/wordpress"><img src="images/wordpress.gif" alt=""></a>
+        </div>
+        <div class="row-item">
+            <img src="images/CRAZY.gif" alt="">
+        </div>
     </div>
     <div id="container"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
