--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="images/CRAZY.gif" alt="">
         </div>
         <div class="row-item">
-            <img src="images/CRAZY.gif" alt="">
+            <img src="images/CRAZY.gif" alt=""><img src="images/chat.gif" alt="">
         </div>
         <div class="row-item">
             <img src="images/CRAZY.gif" alt="">
