--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
             <img src="images/CRAZY.gif" alt="">
         </div>
         <div class="row-item">
-            <img src="images/CRAZY.gif" alt=""><img src="images/chat.gif" alt="">
+            <img src="images/CRAZY.gif" alt="">
+            <a href="#"><img src="images/chat.gif" alt=""></a>
         </div>
         <div class="row-item">
             <img src="images/CRAZY.gif" alt="">
