--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="menu">
         <div class="row-item">
             <img src="images/CRAZY.gif" alt="">
+            <a href="#"><img src="images/chat.gif" alt=""></a>
         </div>
         <div class="row-item">
             <img src="images/CRAZY.gif" alt="">
@@ -25,6 +26,7 @@
         </div>
         <div class="row-item">
             <img src="images/CRAZY.gif" alt="">
+            <a href="#"><img src="images/chat.gif" alt=""></a>
         </div>
     </div>
     <div id="container"></div>
