made some front page changes

--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
 <body>
     <div id="menu">
         <div class="row-item">
-            <img src="images/CRAZY.gif" alt="">
-            <a href="#"><img src="images/chat.gif" alt=""></a>
+            <img src="images/Blue2.gif" alt="">
+            <a href="#"><img class="text" src="images/chatb.png" alt=""></a>
         </div>
         <div class="row-item">
-            <img src="images/CRAZY.gif" alt="">
-            <a href="#"><img src="images/chat.gif" alt=""></a>
+            <img src="images/Blue2.gif" alt="">
+            <a href="#"><img class="text" src="images/chatb.png" alt=""></a>
         </div>
         <div class="row-item">
-            <img src="images/CRAZY.gif" alt="">
-            <a href="/forum"><img src="images/forum.gif" alt=""></a>
+            <img src="images/Blue2.gif" alt="">
+            <a href="/forum"><img class="text" src="images/forumb.png" alt=""></a>
         </div>
         <div class="row-item">
-            <img src="images/CRAZY.gif" alt="">
-            <a href="/wordpress"><img src="images/wordpress.gif" alt=""></a>
+            <img src="images/Blue2.gif" alt="">
+            <a href="/wordpress"><img class="test" src="images/wordpressb.png" alt=""></a>
         </div>
         <div class="row-item">
-            <img src="images/CRAZY.gif" alt="">
-            <a href="#"><img src="images/chat.gif" alt=""></a>
+            <img src="images/Blue2.gif" alt="">
+            <a href="#"><img class="text" src="images/chatb.png" alt=""></a>
         </div>
     </div>
     <div id="container"></div>
